--- a/src/App.css
+++ b/src/App.css
@@ -255,7 +255,7 @@ a:hover {
 }
 
 .pangalan {
-  font-size: 500px;
+  font-size: 500vw;
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
