--- a/src/App.css
+++ b/src/App.css
@@ -1,147 +1,9 @@
-/* Mobile-first styles */
-@media only screen and (max-width: 768px) {
-  .app-container {
-    padding: 10px;
-  }
 
-  .header {
-    font-size: 1.5rem;
-  }
-
-  .home h2,
-  .aboutme h2,
-  .ach h2 {
-    font-size: 1.8rem;
-  }
-
-  .hobbies-container, .achievements-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 15px;
-  }
-
-  .hobby-box, .achievement-box {
-    padding: 10px;
-    text-align: center;
-  }
-
-  .hobby-box img, .achievement-box img {
-    width: 100%;
-    max-width: 150px;
-    height: auto;
-  }
-
-  footer nav {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  footer nav a {
-    margin: 10px 0;
-  }
-
-  footer nav .profile-image {
-    width: 50px;
-    height: 50px;
-  }
-}
-
-/* Tablet and small desktop styles */
-@media only screen and (min-width: 769px) and (max-width: 1024px) {
-  .app-container {
-    padding: 20px;
-  }
-
-  .header {
-    font-size: 2rem;
-  }
-
-  .home h2,
-  .aboutme h2,
-  .ach h2 {
-    font-size: 2rem;
-  }
-
-  .hobbies-container, .achievements-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
-  }
-
-  .hobby-box, .achievement-box {
-    padding: 15px;
-  }
-
-  .hobby-box img, .achievement-box img {
-    width: 100%;
-    max-width: 200px;
-    height: auto;
-  }
-
-  footer nav {
-    flex-direction: row;
-  }
-
-  footer nav a {
-    margin: 0 15px;
-  }
-
-  footer nav .profile-image {
-    width: 60px;
-    height: 60px;
-  }
-}
-
-/* Desktop styles */
-@media only screen and (min-width: 1025px) {
-  .app-container {
-    padding: 30px;
-  }
-
-  .header {
-    font-size: 2.5rem;
-  }
-
-  .home h2,
-  .aboutme h2,
-  .ach h2 {
-    font-size: 2.5rem;
-  }
-
-  .hobbies-container, .achievements-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 30px;
-  }
-
-  .hobby-box, .achievement-box {
-    padding: 20px;
-  }
-
-  .hobby-box img, .achievement-box img {
-    width: 100%;
-    max-width: 250px;
-    height: auto;
-  }
-
-  footer nav {
-    flex-direction: row;
-  }
-
-  footer nav a {
-    margin: 0 20px;
-  }
-
-  footer nav .profile-image {
-    width: 70px;
-    height: 70px;
-  }
-}
 
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  
+  background: url('assets/background_solo.jpg') no-repeat center;
   color: #e5e5e5;
   display: flex;
   flex-direction: column;
@@ -160,7 +22,7 @@ body {
 }
 
 .header {
-  background: black;
+  background: url('assets/background_solo.jpg') no-repeat center;
   padding: 1rem;
   text-align: center;
   
@@ -255,7 +117,7 @@ a:hover {
 }
 
 .pangalan {
-  font-size: 500vw;
+  font-size: 20vw;
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
