--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body, html {
   padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #f0f0f0;
-  background: url("images/background_solo.jpg");
+  background: url("assets/background_solo.jpg");
   overflow-x: hidden;
 }
 
@@ -40,7 +40,7 @@ body, html {
 
 /* Pages */
 .page {
-  background: url("images/background_solo.jpg");
+  background: url("assets/background_solo.jpg");
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(71, 71, 71, 0.4);
@@ -92,7 +92,7 @@ body, html {
 }
 
 .achievement-box {
-  background: url("images/background_solo.jpg");
+  background: url("assets/background_solo.jpg");
   border: 1px solid #a3a3a7;
   padding: 1rem;
   border-radius: 10px;
